<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <data>

        <variable
            name="loginVm"
            type="com.star.quickezeservice.login.viewmodal.LoginVm"/>

        <variable
            name="login"
            type="com.star.quickezeservice.login.modal.Login"/>
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/logo"/>



            <android.support.v7.widget.FitWindowsFrameLayout
                android:layout_marginTop="50dp"
                android:id="@+id/newsCardView"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/topbackground">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp">


                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/username"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:paddingStart="5dp"
                        android:text="@={login.username}"
                        android:background="@drawable/square_border"/>


                    <EditText
                        android:id="@+id/password"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/password"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:inputType="textPassword"
                        android:text="@={login.password}"
                        android:background="@drawable/square_border"
                        android:textSize="18sp"/>


                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:text="@string/login"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:onClick="@{loginVm::onClicklogin}"
                        android:background="@color/colorPrimaryDark"/>


                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/forgot_password"
                        android:onClick="@{loginVm::onClickforgotpassword}"
                        android:textAllCaps="false"/>


                </LinearLayout>


            </android.support.v7.widget.FitWindowsFrameLayout>

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>



</layout>