<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="35dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_left_arrow" />



                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_time"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                </LinearLayout>



        </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:text="@string/start_service"
                    android:gravity="center"
                    android:background="@color/green"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>



                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:text="@string/end_service"
                    android:gravity="center"
                    android:background="@color/red"/>


            </LinearLayout>


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>