<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="updatepasswordVm"
            type="com.star.quickezeservice.forgotpassword.viewmodal.UpdatepasswordVm"/>


    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />


            <android.support.v7.widget.FitWindowsFrameLayout
                android:layout_marginTop="50dp"
                android:id="@+id/newsCardView"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/topbackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp">





                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:hint="@string/new_password"
                        android:paddingStart="5dp"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:background="@drawable/square_border"/>

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:hint="@string/confirm_password"
                        android:textSize="18sp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:background="@drawable/square_border"/>


                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="180dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimaryDark"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:onClick="@{updatepasswordVm::onClicksubmit}"
                        android:text="@string/submit"/>


                </LinearLayout>


            </android.support.v7.widget.FitWindowsFrameLayout>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

</layout>