<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="ratingVm"
            type="com.star.quickezeservice.rating.viewmodal.RatingVm"/>

    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_left_arrow" />



                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>



            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/tick" />


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/thankyou_foryour_payment"/>



        </LinearLayout>


            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:background="@drawable/border_linegray"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp">



                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/kindly_rate_our_service"/>


                <RatingBar
                    android:layout_marginTop="20dp"
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center"
                    android:rating="2.0" />

            </LinearLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/layout"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/border_linegray"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>