<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="inoicecashVm"
            type="com.star.quickezeservice.invoicemode.viewmodal.InvoiceCashVm"/>
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimaryDark">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_left_arrow" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="Invoice - 0015567"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                </LinearLayout>


            </android.support.design.widget.AppBarLayout>



            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Dear Gandhinathan your service request no 000124 has been successfully completed by our service  man Dinesh kumar"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />




            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/total_bill_is"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:text="Rs.874"
                    android:backgroundTint="@color/colorPrimaryDark"/>


            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/tax"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:text="150"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryDark"/>


            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/payable_amount"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="Rs.1026 /-"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"/>

            </LinearLayout>


            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/kindly_pay_by_cash"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@color/colorPrimaryDark"/>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


</layout>