<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="invoiceVm"
            type="com.star.quickezeservice.invoice.viewmodal.InvoiceVm"/>


    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimaryDark">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="35dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_left_arrow" />


                        <TextView
                            android:layout_marginStart="10dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/invoice"
                            android:textAllCaps="false"
                            android:textSize="18sp"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </android.support.design.widget.AppBarLayout>







            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:layout_marginBottom="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="Invoice - 0015684"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>


                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="Your Service With Gandhinathan has ended and total billing time is"
                        android:layout_marginBottom="10dp"/>



                </LinearLayout>


            </android.support.v7.widget.CardView>




            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/collect_payment_by"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">




                <TextView
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/cash"
                   android:background="@color/colorPrimaryDark" />




                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/cash"
                    android:background="@drawable/border_linegray" />




            </LinearLayout>



        </LinearLayout>





    </android.support.design.widget.CoordinatorLayout>

</layout>